<resources>
    <string name="app_name">Brisk</string>
    <string name="cant_open_a_store_without_location_permission_error">Can\'t open a store without
        Location permission
    </string>
    <string name="empty_store_name_error">Please insert Store name</string>
    <string name="empty_store_email_error">Please insert Store email</string>
    <string name="invalid_email_error">Invalid email address</string>
    <string name="empty_store_delivery_price_error">Please insert delivery price</string>
    <string name="empty_store_geo_location">Please select position and radius</string>
    <string name="no_location_error">We need your location\nto run properly</string>
    <string name="no_location_error_description">Enable GPS or Location Services in device or app
        setting
    </string>
    <string name="no_internet_connection_error">No internet connection</string>
    <string name="google_play_services_error">No valid Google Play Services APK found</string>
    <string name="cant_delete_item_from_order_error">Error in removing item from order</string>
    <string name="error_in_getting_categories_from_server">Error in getting categories from server,
        please try later
    </string>
    <string name="error_in_creating_store">Error in creating a shop, please try later</string>
    <string name="missing_product_name_error">Missing product name</string>
    <string name="missing_category_error">Missing category</string>
    <string name="missing_sub_category_error">Missing sub category</string>
    <string name="missing_product_brand_error">Missing product brand name</string>
    <string name="missing_product_price_error">Missing product price</string>
    <string name="missing_product_image_error">Missing product image</string>
    <string name="error_in_getting_items_for_sale">Some error occurred in getting items for sale, please try again</string>
    <string name="min_price_error">Min order price for this store is: %s₪</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="what_do_you_need">What do you need?</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_orders">My Orders</string>
    <string name="items_for_sale">Items for sale</string>
    <string name="working_area">Working area</string>
    <string name="opening_hours">Opening hours</string>
    <string name="app_info">App Info</string>
    <string name="customer_service_247">Customer Service 24/7</string>
    <string name="switch_to_customer">Switch To Customer</string>
    <string name="switch_to_store">Switch To Store</string>
    <string name="next">Next</string>
    <string name="shop_name">Shop Name</string>
    <string name="payment_email">Payment E-mail</string>
    <string name="delivery_price">Delivery price</string>
    <string name="become_brisker">Become Brisker</string>
    <string name="open_a_brisk_shop">Open a Brisk Shop</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="no_items">No items</string>
    <string name="no_items_for_sale">No items for sale</string>
    <string name="min_price" formatted="false">Min. %s%s</string>
    <string name="average_price" formatted="false">Avg. %s%s</string>
    <string name="your_price">Your price</string>
    <string name="action_done">Done</string>
    <string name="add_items_for_sale">Add Items For Sale</string>
    <string name="shop_items">Shop items</string>
    <string name="store_details">Store details</string>
    <string name="store_geo_data_fragment_title">Your shop working area</string>
    <string name="store_availability_fragment_title">Store availability</string>
    <string name="store_orders_fragment_title">Store orders</string>
    <string name="to">To</string>
    <string name="circle_border_color">#6dad57</string>
    <string name="distance_units">m</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="filter">Filter</string>
    <string name="example_category">Example categoryCode</string>
    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="product_brand">Product brand</string>
    <string name="product_name">Product name</string>
    <string name="currency_sign">₪</string>
    <string name="sample_name">Sample Longname</string>
    <string name="sample_hashtag">#CocaCola</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="low_storage_error">Barcode detector dependencies cannot be downloaded due to low
        device storage
    </string>
    <string name="no_camera_permission">This application cannot run because it does not have the
        camera permission. The application will now exit.
    </string>
    <string name="product_not_found">Product Not Found</string>
    <string name="product_found">Product Found!</string>
    <string name="scan_to_add_product">Scan to Add Product</string>
    <string name="readbarcode">ReadBarcode</string>
    <string name="select_your_store_position_and_working_radius">Select your store position and
        working radius
    </string>
    <string name="add_to_cart">Add to cart</string>
    <string name="update_cart">Update cart</string>
    <string name="add_to_stock">Add to stock</string>
    <string name="update_price">Update price</string>
    <string name="cart">Cart</string>
    <string name="title_activity_cart">Cart Activity</string>
    <string name="compare_stores">Compare Stores</string>
    <string name="swipe_to_dismiss">Swipe to dismiss</string>
    <string name="no_items_in_your_shopping_bag">No items in your shopping bag</string>
    <string name="select">Select</string>
    <string name="total_price">Total ₪%s</string>
    <string name="avg_eta">avg. %d min.</string>
    <string name="number_of_reviews">%d reviews</string>
    <string name="eta">%d min.</string>
    <string name="delivery_price_with_value">Delivery %s₪</string>
    <string name="available_items_counter" formatted="false">&#8226; %s/%s products \n &#160;&#160;available</string>
    <string name="all">All</string>
    <string name="my_shopping">My shopping</string>
    <string name="delivery">Delivery</string>
    <string name="price_value">₪%s</string>
    <string name="radius_distance">%skm</string>
    <string name="total">Total</string>
    <string name="order">Order</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="perfix_israel">+972</string>
    <string name="the_code_is_on_the_way_to">The code is on the way to %s</string>
    <string name="enter_code_here">Enter code here</string>
    <string name="havent_received_a_code_yet">Haven\'t received a code yet?</string>
    <string name="send_me_a_new_code">SEND ME A NEW CODE</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="add_your_photo_u0026_name"><![CDATA[Add your photo & name]]></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="lets_s_get_started">LETS\'s GET STARTED</string>
    <string name="start_timer">01:00</string>
    <string name="end_timer">00:00</string>
    <string name="not_a_valid_name">Not a valid name!</string>
    <string name="not_a_valid_last_name">Not a valid last name!</string>
    <string name="not_a_valid_phone_number">Not a valid phone number!</string>
    <string name="not_a_valid_code_number">Not a valid code number!</string>
    <string name="code_dosn_t_match">Code doesn\'t match!</string>
    <string name="sms_message"><![CDATA[ From : %1$s<br/>%2$s]]></string>
    <string name="network_problem_please_try_again">Network Problem...Please try again</string>
    <string name="all_products_available">&#8226; All products \n &#160;&#160;available</string>
    <string name="store">Store</string>
    <string name="categories">Categories</string>
    <string name="categoryCode">Category</string>
    <string name="subCategoryCode">Subcategory</string>
    <string name="check_internet_connection">Check internet connection</string>
    <string name="select_category">Select Category</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="order_completed">Your order has been completed</string>
    <string name="order_failed">Order failed</string>
    <string name="tip">Tip</string>
    <string name="subtotal">Subtotal</string>
    <string name="order_no_x">Order No. #%s</string>
    <string name="title_activity_add_product">AddProductActivity</string>
    <string name="subcategories">SubCategories</string>
    <string name="select_subcategory">Select subcategory</string>
    <string name="add_product">Add product</string>
    <string name="product_added">Product added</string>
    <string name="missing_fields_error">Missing fields</string>
    <string name="speed">Speed</string>
    <string name="quality">Quality</string>
    <string name="messenger">Messenger</string>
    <string name="deliveries">Deliveries</string>
    <string name="send_rating">SEND RATING</string>
    <string name="rate">Rate</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="mailto">mailto:</string>
    <string name="contact_us">Contact Us</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_profile">Your profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="cant_create_new_user_error">Can\'t create new user, please try to reopen</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="waiting_for_seller_approval">Waiting for seller approval</string>
    <string name="in_progress_state">In progress</string>
    <string name="in_progress">In progress</string>
    <string name="on_the_way">On the way</string>
    <string name="delivered">Delivered</string>
    <string name="customer_address">Customer address</string>
    <string name="awaiting_approval">Awaiting Approval</string>
    <string name="approve">Approve</string>
    <string name="report">Report</string>
    <string name="order_canceled">Order canceled</string>
    <string name="canceled">Canceled</string>
    <string name="pay">Please pay now</string>
    <string name="other">Other</string>
    <string name="the_buyer_cant_be_reached">The buyer can\'t be reached</string>
    <string name="the_buyer_didnt_pay">The buyer didn\'t pay</string>
    <string name="notes">Notes</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_us">Share Us</string>
    <string name="house_number">House number</string>
    <string name="floor_number">Floor number</string>
    <string name="apartment_number">Apartment number</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="more">More</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_and_conditions_brisker">Terms and Conditions - Seller</string>
    <string name="orders">Orders</string>
    <string name="stores">Stores</string>
</resources>