<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_seller_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard"/>

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_receipt_black_24dp"
            android:title="@string/orders"/>

        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_inventory"
            android:title="@string/items_for_sale"/>

        <item
            android:id="@+id/nav_working_radius"
            android:icon="@drawable/ic_geo_data"
            android:title="@string/working_area"/>

        <item
            android:id="@+id/nav_working_hours"
            android:icon="@drawable/ic_availability"
            android:title="@string/opening_hours"/>
    </group>

    <item android:title="More">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info"
                android:title="@string/app_info"/>
            <item
                android:id="@+id/nav_customer_service"
                android:icon="@drawable/ic_customer_service"
                android:title="@string/customer_service_247"/>
            <item
                android:id="@+id/nav_switch_to_customer"
                android:icon="@drawable/ic_custumer"
                android:title="@string/switch_to_customer"/>
        </menu>
    </item>
</menu>
