<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            fontPath="fonts/opensans_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/report"
            android:textColor="@color/dark_gray"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/titleTextView"
            fontPath="fonts/opensans_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sample_name"
            android:textColor="@color/dark_gray"
            android:textSize="22sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radioButtonOptionA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/the_buyer_didnt_pay"/>
        <RadioButton
            android:id="@+id/radioButtonOptionB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/the_buyer_cant_be_reached"/>
        <RadioButton
            android:id="@+id/radioButtonOptionC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"/>
    </RadioGroup>

    <EditText
        android:id="@+id/reasonEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:maxLength="140"
        android:maxLines="3"
        android:visibility="gone"/>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_cornered_ripple"
        android:text="@string/report"
        android:textColor="@color/white"/>

</LinearLayout>



