<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@color/background_gray"
              android:orientation="vertical"
              tools:ignore="MissingPrefix">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/selected_cart_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            android:title="@string/title_activity_cart"
            android:elevation="@dimen/toolbar_elevation"/>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/store_header"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/light_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:orientation="vertical">

            <TextView
                fontPath="fonts/opensans_light.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_shopping"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"/>
            <TextView
                fontPath="fonts/opensans_light.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/delivery"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"/>
            <TextView
                fontPath="fonts/opensans_light.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/total"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="16dp"
                      android:layout_marginStart="16dp"
                      android:layout_weight="1"
                      android:orientation="vertical">

            <TextView
                android:id="@+id/productsPriceTextView"
                fontPath="fonts/opensans_bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_value"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/deliveryPriceBottomEditText"
                fontPath="fonts/opensans_bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/price_value"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/totalPriceTextView"
                fontPath="fonts/opensans_bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/price_value"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <Button
            android:id="@+id/orderCartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_cornered_ripple"
            android:minHeight="0dp"
            android:onClick="actionButtonClicked"
            android:paddingBottom="12dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="12dp"
            android:text="@string/next"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>
