<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AddAddressFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="top">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_address_top"/>
                <ImageView
                    android:id="@+id/motorCycleImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/ic_motor_cycle"/>
                <ImageView
                    android:id="@+id/motorCycleImageViewRe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginBottom="2dp"
                    android:visibility="gone"
                    android:src="@drawable/ic_motor_cycle_re"/>
            </FrameLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:focusableInTouchMode="true"
                          android:padding="@dimen/activity_vertical_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/cityEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@+id/streetEditText"
                        android:hint="@string/city"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/streetEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@+id/houseNumberEditText"
                        android:hint="@string/street"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/houseNumberEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:nextFocusDown="@+id/floorEditText"
                        android:hint="@string/house_number"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/floorEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:nextFocusDown="@+id/apartmentEditText"
                        android:hint="@string/floor_number"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/apartmentEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:nextFocusDown="@+id/notesEditText"
                        android:hint="@string/apartment_number"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/notesEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="3"
                        android:maxLength="240"
                        android:hint="@string/notes"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="12dp"
                  android:orientation="horizontal">

        <Button
            android:id="@+id/addAddressButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/bg_cornered_ripple"
            android:text="@string/next"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/clearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:background="@drawable/bg_cornered_ripple"
            android:text="@string/clear_selection"
            android:textColor="@color/white"/>

    </LinearLayout>
</LinearLayout>